<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tujian P</string>
    <string name="Juzi">Chinese sayings</string>
    <string name="BingDaily">Bing daily pictures</string>
    <string name="About">About</string>
    <string name="AboutSelf">About this App</string>
    <string name="AboutProject">About this Project</string>
    <string name="nothing">Nothing!</string>
    <string name="load">Loading...</string>
    <string name="loadf">Failed to load!</string>
    <string name="loaddone">Load complete</string>
    <string name="cancel">Cancel</string>
    <string name="err">Wrong!</string>
    <string name="knew">Done</string>
    <string name="download">Download</string>
    <string name="setwall">Set as wallpaper</string>
    <string name="share">Share</string>
    <string name="shareMessage">「%s」\nThe Information of today\'s picture:\n%s\nDownload Link:\n%s \nFrom@Tujian</string>
    <string name="ifDownload">Download?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="KeyWord">No one is an island.\nA picture is a world</string>
    <string name="CH">Anime Illustration</string>
    <string name="ZH">Photography</string>
    <string name="today">Today</string>
    <string name="history">Archive</string>
    <string name="ComputerWallpaper">Desktops Wallpapers</string>
    <string name="OtherItem">Others</string>
    <string name="today_pic">Today</string>
    <string name="setf">Failed</string>
    <string name="setd">Done!</string>
    <string name="nextJ">next</string>
    <string name="done_read">done</string>
    <string name="copy">copy</string>
    <string name="done_copy">done!</string>
    <string name="SJ">random</string>
    <string name="aboutAppMessage">「无人为孤岛，一图一世界。」\n\n图鉴是一款简易的壁纸推荐软件有杂烩（摄影）、插画（二次元）以及电脑壁纸三个分类，均由人工从Pixiv,酷安, Unsplash等网站摘取而来。经过精细挑选，会更适合来用做壁纸。\n\n图鉴是我在「酷安日图」服务器关闭之后，用自己的业余时间构思的，心血之作。目前已经慢慢从最初漏洞百出的Beta1成长为了2.0。\n\n图鉴的每一张照片都是由我/其他维护者精选出来的。大概选一张足以收录至图鉴的照片需要20分钟+。所以，我衷心的感谢您，能够使用我的「图鉴」。\n\n本版本为图鉴开发组@Gadgetry 开发的Java版本，特此感谢。</string>
    <string name="more">More</string>
    <string name="contributo">Contributor</string>
    <string name="p_list">List</string>
    <string name="Join">Join us</string>
    <string name="tgbot">Telegram Bot</string>
    <string name="QQchat">QQ Group</string>
    <string name="help">Help</string>
    <string name="HelpMessage">1.Click on the image anywhere for a while and you can see and download it with a big view.</string>
    <string name="help_clickAndLong">Click here to view the information of Today\'s Picture.In order to view more Calgarties, please swipe right.If you want to see The original image,press the picture for a few seconds and you will get it.</string>
    <string name="help_sidebar">You can view other Pictures in the Calgary Archive. As well,Anime works can be seen at the Calgry Photography.</string>
    <string name="click_back">Press again to exit</string>
    <string name="click_too_many">Too frequent!</string>
    <string name="openApp">Launch Tujian P</string>
    <string name="Libary">We used the following library:</string>
</resources>